tests/compile_fail/test_and_skuld_test.rs
#[skuld::test]
#[test]
fn both_test_attrs() {}

fn main() {}
